--- a/themes/huxblog/layout/_partial/head.ejs
+++ b/themes/huxblog/layout/_partial/head.ejs
@@ -47,5 +47,6 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3299276415784548"
+         crossorigin="anonymous"></script>
 </head>
