--- a/themes/huxblog/source/css/hux-blog.css
+++ b/themes/huxblog/source/css/hux-blog.css
@@ -92,7 +92,7 @@ a img:focus {
   cursor: zoom-in;
 }
 article {
-  /*overflow-x: hidden; 중첩된 세로 스크롤 제거로 주석처리 */
+  overflow-x: hidden;
 }
 blockquote {
   color: #808080;
