adsense 타입별 광고 추가

--- a/themes/huxblog/layout/page.ejs
+++ b/themes/huxblog/layout/page.ejs
@@ -272,6 +272,10 @@ layout: layout
                     <% }); %>
                 </ul>
                 <% }%>
+
+                <!-- ad start -->
+                <%- partial('adsense/google-adsense-multi') %>
+                <!-- ad end -->
             </div>
         <%} %>
     </div>
